# CMakeList.txt : CMake project for 3D_curves_hierarchy, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("3D_curves_hierarchy")

# Add source to this project's executable.
add_executable (3D_curves_hierarchy "3D_curves_hierarchy.cpp" "3D_curves_hierarchy.h")

# TODO: Add tests and install targets if needed.
